# Libra

./: Lucky  README.md  String_Library  String_Library.cpp  a.out
C/C_Crash_Course/Ch1/: CDataTypes.c  helloworld
C/C_Crash_Course/Ch2/: StringPrac  StringPrac.c
CPP/CPP_CLion/: CMakeLists.txt  a.out  main
CPP/CPP_CLion/Blogs/: Blog2output.txt  Blog3output.txt  BlogPart1.cpp  BlogPart1.tar  BlogPart2.cpp  BlogPart2.tar  BlogPart3.cpp  BlogPart3.tar  BlogPart4.cpp  BlogStart.cpp  CMakeLists.txt  a.out  assignment_headings.cpp  constprac  constprac.cpp  static  static.cpp  temporary  temporary.cpp  thisptr  thisptr.cpp
CPP/CPP_CLion/Blogs/Blog4/: Area.cpp  Area.h  BlogPart4.cpp  Post.cpp  Post.h
CPP/CPP_CLion/Blogs/constprac.dSYM/Contents/: Info.plist
CPP/CPP_CLion/Blogs/constprac.dSYM/Contents/Resources/DWARF/: constprac
CPP/CPP_CLion/Blogs/static.dSYM/Contents/Resources/DWARF/: static
CPP/CPP_CLion/Blogs/temporary.dSYM/Contents/Resources/DWARF/: temporary
CPP/CPP_CLion/Blogs/thisptr.dSYM/Contents/: Info.plist
CPP/CPP_CLion/Blogs/thisptr.dSYM/Contents/Resources/DWARF/: thisptr
CPP/CPP_CLion/Module1/: CommonErrorsArrays.cpp  FunctionsArrays.cpp  NoArray.cpp  Search.cpp  SimpleArray.cpp  SimpleArrayVer2.cpp  Sorting.cpp
CPP/CPP_CLion/Module2/: BasicClass.cpp  ClassesPractice.cpp  CommonErrorsStructs.cpp  MotivationClasses.cpp  MotivationStructure.cpp  OOPClasses.cpp  StringValidation.cpp  StructurePractice.cpp  Structures.cpp  StudentRegStart.cpp
CPP/CPP_CLion/Module3/: Bubby.cpp  Bubby.h  ClassConstructors.cpp  ClassMemberVariable.cpp  ConstParam.cpp  Constructors.cpp  InlineFunc.cpp  StaticMembers.cpp  StudentReg2.cpp
CPP/CPP_CLion/Module4/: ArrayExample.cpp  FriendClass.cpp  FriendsExample.cpp  FriendsExample2.cpp  MemberFunctions.cpp  NotMemberFunctions.cpp  PrePostfixExample.cpp  StudentReg3.cpp  operatorOverloading.cpp
CPP/CPP_CLion/Module5/: AssignmentOpExStr.cpp  BasicPointers.cpp  NameSpacesExample.cpp  PtrMotivation.cpp  PtrToArray  PtrToArray.cpp  StudentRegPart3.cpp  StudentRegPart4Ch10.cpp
CPP/CPP_CLion/Module5/CLionExample/: CLionExample.cpp  CMakeLists.txt  ExampleClass.cpp  ExampleClass.h
CPP/CPP_CLion/Module5/PtrToArray.dSYM/Contents/: Info.plist
CPP/CPP_CLion/Module5/PtrToArray.dSYM/Contents/Resources/DWARF/: PtrToArray
CPP/CPP_CLion/Module5/StudentRegPart4 - Ch11 --1/: CMakeLists.txt  Course.cpp  Course.h  Student.cpp  Student.h  main.cpp
CPP/CPP_CLion/Module5/TimeExamples/: CMakeLists.txt  TimeExamples.cpp  dtime.cpp  dtime.h
CPP/CPP_CLion/main.dSYM/Contents/Resources/DWARF/: main
CPP/CPP_Crash_Course/: CPP_dataTypes.cpp  a.out  binaryOperatorOverloading.cpp  boxy.cpp  functionOVerload  functionOVerload.cpp  pointers  pointers.cpp  unaryMinusOperator  unaryMinusOperator.cpp  vectors.cpp
CPP/CPP_Crash_Course/Basics/: 001.1Operator_Addition.cpp  001.2Operator_Subtraction.cpp  001.3Operator_Multiplication.cpp  001.4Operator_Division.cpp  001.5Operator_Modulo.cpp  002.1TwosComplement.cpp  002.2signedchar.cpp  AssignmentOperators.cpp  Inheritance.cpp  VariableOperation.cpp  addTwo.cpp  datatype_size.cpp  declaringVariables.cpp  helloworld.cpp  signedChar.cpp  unsignedNegative.cpp
CPP/CPP_Crash_Course/Ch2/: StringPrac  StringPrac.cpp
CPP/Practice/: CMakeLists.txt  box.cpp
CPP/Practice/Blog/: Area.cpp  (+5 more)
String_Library.dSYM/Contents/: Info.plist
(+30 files in other folders)
