cmake_minimum_required(VERSION 3.23)
project(CPP_CLion)

set(CMAKE_CXX_STANDARD 11)

add_executable(CLion main.cpp)
add_executable(NoArray Module1/NoArray.cpp)
add_executable(SimpleArray Module1/SimpleArray.cpp)
add_executable(SimpleArrayVer2 Module1/SimpleArrayVer2.cpp)
add_executable(FunctionsArrays Module1/FunctionsArrays.cpp)
add_executable(Search Module1/Search.cpp)
add_executable(Sorting Module1/Sorting.cpp)
add_executable(CommonErrorsArrays Module1/CommonErrorsArrays.cpp)

add_executable(MotivationStructure Module2/MotivationStructure.cpp)
add_executable(Structures Module2/Structures.cpp)
add_executable(StructurePractice Module2/StructurePractice.cpp)
add_executable(CommonErrorsStructs Module2/CommonErrorsStructs.cpp)
add_executable(MotivationClasses Module2/MotivationClasses.cpp)
add_executable(BasicClass Module2/BasicClass.cpp)
add_executable(ClassesPractice Module2/ClassesPractice.cpp)
add_executable(OOPClasses Module2/OOPClasses.cpp)
add_executable(StudentRegStart Module2/StudentRegStart.cpp)
add_executable(StringValidation Module2/StringValidation.cpp)